# cppfinalproject

./: CMakeLists.txt  README.md  ast.dot  parsetree.dot
pljit/: AstNode.h  CMakeLists.txt  Lexer.cpp  Lexer.h  PNode.cpp  PNode.h  ParsePrintVisitor.cpp  ParsePrintVisitor.h  ParseTreeVisitor.h  Parser.cpp  Parser.h  Pljit.cpp  Pljit.h  SourceCodeManager.cpp  SourceCodeManager.h  Token.cpp  Token.h  TreeNode.cpp  TreeNode.h  main.cpp
pljit/CodeManagement/: SourceCodeManager.cpp  SourceCodeManager.h
pljit/Evaluation/: EvalInstance.cpp  EvalInstance.h
pljit/Lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
pljit/Parser/: ParsePrintVisitor.cpp  ParsePrintVisitor.h  ParseTreeNode.cpp  ParseTreeNode.h  ParseTreeVisitor.h  Parser.cpp  Parser.h
pljit/Pljit/: FunctionObject.cpp  FunctionObject.h  Pljit.cpp  Pljit.h
pljit/SemanticAnalysis/: AstNode.cpp  AstNode.h  AstPrintVisitor.cpp  AstPrintVisitor.h  AstVisitor.h  ConstantPropOpt.cpp  ConstantPropOpt.h  DeadCodeOpt.cpp  DeadCodeOpt.h  OptimisePass.cpp  OptimisePass.h  SemanticAnalyser.cpp  SemanticAnalyser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h
test/: CMakeLists.txt  Tester_Evaluation.cpp  Tester_Lexer.cpp  Tester_Optimisation.cpp  Tester_Parser.cpp  Tester_Pljit.cpp  Tester_Semantic.cpp
